# froodi

./: Cargo.toml  README.md  justfile
benches/: container.rs
examples/async_auto_provide/: Cargo.toml
examples/async_auto_provide/src/: main.rs
examples/async_finalizer/: Cargo.toml
examples/async_finalizer/src/: main.rs
examples/async_provide/: Cargo.toml
examples/async_provide/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/box_dyn_provide/: Cargo.toml
examples/box_dyn_provide/src/: main.rs
examples/dptree/: Cargo.toml
examples/dptree/src/: main.rs
examples/sync_auto_provide/: Cargo.toml
examples/sync_auto_provide/src/: main.rs
examples/sync_finalizer/: Cargo.toml
examples/sync_finalizer/src/: main.rs
examples/sync_provide/: Cargo.toml
examples/sync_provide/src/: main.rs
examples/sync_provide_auto_registration/: Cargo.toml
examples/sync_provide_auto_registration/src/: main.rs
examples/telers/: Cargo.toml
examples/telers/src/: main.rs
froodi/: Cargo.toml  README.md  build.rs
froodi-auto/: Cargo.toml  README.md
froodi-auto-macros/: Cargo.toml  LICENSE  README.md
froodi-auto-macros/src/: attr_parsing.rs  injectable.rs  lib.rs
froodi-auto-macros/src/injectable/: attr.rs
froodi-auto/src/: entry_getters.rs  lib.rs  registry.rs
froodi-macros/: Cargo.toml
froodi-macros/src/: attr_parsing.rs  injectable.rs  lib.rs
froodi-macros/src/injectable/: attr.rs
froodi/benches/: async_container.rs  container.rs
froodi/benches/compare/: sync.rs
froodi/benches/init/: async.rs  sync.rs
froodi/benches/resolve/: async.rs  sync.rs
froodi/benches/resolve/concurrent/: async.rs  sync.rs
froodi/src/: any.rs  async.rs  async_impl.rs  autowired.rs  cache.rs  config.rs  container.rs  context.rs  dependency.rs  dependency_resolver.rs  errors.rs  finalizer.rs  inject.rs  instantiator.rs  integrations.rs  lib.rs  lock.rs  macros.rs  macros_utils.rs  registry.rs  registry_macros.rs  scope.rs  utils.rs
froodi/src/async/: container.rs  dependency_resolver.rs  instantiator.rs  registry.rs
froodi/src/async_impl/: autowired.rs  container.rs  dependency_resolver.rs  finalizer.rs  instantiator.rs  registry.rs  service.rs
froodi/src/async_impl/service/: base.rs  boxed_clone.rs  map_future.rs  service_fn.rs
froodi/src/errors/: container.rs  dependency_resolver.rs  instantiate.rs  instantiator.rs
froodi/src/integrations/: axum.rs  dptree.rs  telers.rs
froodi/src/macros_utils/: aliases.rs  async_impl.rs  sync.rs  types.rs
froodi/src/service/: boxed_clone.rs
froodi/src/utils/: future.rs  hlist.rs  merge.rs  thread_safety.rs
froodi/tests/: async_resolution.rs  compile_fail.rs  injectable.rs  injectable_async.rs  injectable_mixed.rs  sync_context.rs  sync_errors.rs  sync_finalizers_close.rs  sync_resolution.rs  sync_scopes.rs
froodi/tests/auto/: async.rs  mixed.rs  sync.rs
froodi/tests/ui/: async_registry_errors.rs  async_registry_errors.stderr  registry_errors.rs  registry_errors.stderr
src/: async.rs  cache.rs  container.rs  context.rs  dependency_resolver.rs  errors.rs  finalizer.rs  instantiator.rs  lib.rs  registry.rs  scope.rs  service.rs
src/async/: context.rs  dependency_resolver.rs  instantiator.rs  registry.rs  service.rs
src/async/service/: base.rs  fn_service.rs  service_fn.rs
src/errors/: dependency_resolver.rs  instantiate.rs  instantiator.rs
src/integrations/: axum.rs
src/service/: base.rs  boxed_clone.rs  fn_service.rs  service_fn.rs
