[package]
name = "froodi"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["attributes"]}
tokio = { version = "1.43", default-features = false, optional = true, features = ["sync"] }
tower = { version = "0.5", default-features = false, optional = true, features = ["util"] }
futures-util = { version = "0.3", default-features = false, optional = true }

[features]
async = ["futures-util", "tower"]
async_tokio = ["async", "tokio"]

[dev-dependencies]
tokio = { version = "1.43", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", default-features = false }

[profile.test]
opt-level = 3
