[package]
name = "froodi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
parking_lot = { version = "0.12", default-features = false, features = ["default"], optional = true }

[features]
default = ["handle"]

debug = []
eq = []
test = ["debug", "eq", "handle"]

lock = ["parking_lot"]
handle = ["lock"]

[dev-dependencies]
tracing-test = { version = "0.2", default-features = false }

[profile.test]
opt-level = 3
