[package]
name = "froodi-macros"
version = "1.0.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]

[features]
default = []

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
