[package]
name = "froodi"
version = "1.0.0-beta.13"
edition = "2021"
authors = ["Desiders"]
license = "Apache-2.0"
repository = "https://github.com/Desiders/froodi"

description = "An ergonomic Rust IoC container"
keywords = ["ioc", "di", "dependency-injection"]
categories = ["no-std", "development-tools", "config"]

rust-version = "1.66.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
parking_lot = { version = "0.12", default-features = false }
frunk = { version = "0.4", default-features = false }
ahash = { version = "0.8", default-features = false }

tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
tokio = { version = "1", default-features = false, optional = true }
h2 = { version = "0.4", optional = true }

axum = { version = ">= 0.6, <= 0.8", default-features = false, optional = true }
dptree = { version = "0.5", optional = true }

telers = { version = ">= 1.0.0-alpha.27, <= 1.0.0-alpha.28", default-features = false, optional = true }

[features]
default = ["std", "thread_safe"]

std = ["anyhow/std", "thiserror/std", "tracing/std"]

thread_safe = []
async = ["tokio", "tokio/sync"]

axum = [
    "dep:axum",
    "axum/ws",
    "dep:tower-layer",
    "dep:tower-service",
    "thread_safe",
]
http2-axum = ["dep:h2", "axum/http2"]

dptree = ["dep:dptree", "thread_safe"]

telers = ["dep:telers", "thread_safe"]

[dev-dependencies]
tracing-test = { version = "0.2", default-features = false }
criterion = { version = "0.7", features = ["async_tokio"] }
axum = { version = "0.8" }
axum-test = { version = "18", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

froodi-auto = { path = "../froodi-auto", default-features = false }

[build-dependencies]
version_check = "0.9"

[[bench]]
name = "sync_container_init"
path = "benches/init/sync.rs"
harness = false
test = false
doctest = false
doc = false
required-features = []

[[bench]]
name = "async_container_init"
path = "benches/init/async.rs"
harness = false
test = false
doctest = false
doc = false
required-features = ["async"]

[[bench]]
name = "container_resolve"
path = "benches/resolve/sync.rs"
harness = false
test = false
doctest = false
doc = false
required-features = []

[[bench]]
name = "async_container_resolve"
path = "benches/resolve/async.rs"
harness = false
test = false
doctest = false
doc = false
required-features = ["async"]

[[bench]]
name = "container_resolve_concurrent"
path = "benches/resolve/concurrent/sync.rs"
harness = false
test = false
doctest = false
doc = false
required-features = ["thread_safe"]

[[bench]]
name = "async_container_resolve_concurrent"
path = "benches/resolve/concurrent/async.rs"
harness = false
test = false
doctest = false
doc = false
required-features = ["async", "thread_safe"]

[[test]]
name = "auto_registration_async"
path = "tests/auto/async.rs"
bench = false
doctest = false
doc = false
required-features = ["async", "froodi-auto/async", "froodi-auto/macros"]

[[test]]
name = "auto_registration_mixed"
path = "tests/auto/mixed.rs"
bench = false
doctest = false
doc = false
required-features = ["async", "froodi-auto/async", "froodi-auto/macros"]

[[test]]
name = "auto_registration_sync"
path = "tests/auto/sync.rs"
bench = false
doctest = false
doc = false
required-features = ["froodi-auto/macros"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
